package com.sga.model.enums;

public enum StatusMatricula {
    ATIVA,
    TRANCADA,
    CANCELADA,
    APROVADO,
    REPROVADO
}
