package com.sga.model.enums;

public enum TipoAvaliacao {
    PROVA,
    TRABALHO,
    SEMINARIO,
    LISTA,
    OUTRO
}
