-- =====================================================================
-- V001 — Estrutura institucional
-- IDs BIGINT (identity). Endereco e CargaHoraria são @Embeddable,
-- portanto entram como COLUNAS inline (não viram tabelas).
-- =====================================================================

CREATE TABLE universidade (
    id      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome    VARCHAR(255) NOT NULL,
    sigla   VARCHAR(50)  NOT NULL,
    -- @Embedded Endereco
    numero  VARCHAR(20),
    cep     VARCHAR(9),
    obs     VARCHAR(255),
    deleted BOOLEAN NOT NULL DEFAULT FALSE
);

CREATE TABLE departamento (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    sigla           VARCHAR(50)  NOT NULL,
    nome            VARCHAR(255) NOT NULL,
    universidade_id BIGINT NOT NULL,
    -- @Embedded Endereco
    numero          VARCHAR(20),
    cep             VARCHAR(9),
    obs             VARCHAR(255),
    deleted         BOOLEAN NOT NULL DEFAULT FALSE,
    CONSTRAINT fk_departamento_universidade
        FOREIGN KEY (universidade_id) REFERENCES universidade (id)
);

CREATE TABLE curso (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    sigla           VARCHAR(50)  NOT NULL,
    nome            VARCHAR(255) NOT NULL,
    departamento_id BIGINT NOT NULL,
    -- @Embedded CargaHoraria
    ch_obrigatoria  INTEGER,
    ch_optativa     INTEGER,
    ch_nucleo_livre INTEGER,
    deleted         BOOLEAN NOT NULL DEFAULT FALSE,
    CONSTRAINT fk_curso_departamento
        FOREIGN KEY (departamento_id) REFERENCES departamento (id)
);

CREATE TABLE disciplina (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo          VARCHAR(50) NOT NULL,
    tipo            VARCHAR(50),
    carga_horaria   INTEGER NOT NULL,
    pre_requisito   VARCHAR(255),
    departamento_id BIGINT NOT NULL,
    deleted         BOOLEAN NOT NULL DEFAULT FALSE,
    CONSTRAINT fk_disciplina_departamento
        FOREIGN KEY (departamento_id) REFERENCES departamento (id)
);
