@startuml Diagrama de Classes

' =====================================================================
' SGA - Diagrama de Classes (MODELO CANÔNICO — ver docs/database.dbml)
'  - Herança JOINED: Pessoa abstrata; Aluno/Professor/Admin.
'  - IDs: UUID em Pessoa/Aluno/Professor/Admin/Turma/Matriculado/
'    Avalia/Arquivo; Long (BIGINT) em Universidade/Departamento/Curso/
'    Disciplina.
'  - Endereco e CargaHoraria são value objects (@Embeddable).
'  - Enums Role/StatusMatricula/TipoAvaliacao mapeados via
'    @Enumerated(STRING).
'  - Arquivo é entidade própria; Avalia x Arquivo é N:M (Modelo B).
' =====================================================================

abstract class Pessoa {
    - id : UUID
    - nome : String
    - email : String
    - senha : String
    - role : Role
    - matricula : String
    - cpf : String
    - dataNascimento : LocalDate
    +autenticar(email: String, senha: String): boolean
    +getNome(): String
    +getEmail(): String
    +getRole(): Role
    +getMatricula(): String
    +getCpf(): String
}

enum Role {
    ALUNO
    PROFESSOR
    ADMIN
}

class Aluno {
    - nota : Double
    - frequencia : Double
    +realizarMatricula(turma: Turma): Matriculado
    +cancelarMatricula(turma: Turma): void
    +consultarHistorico(): List<Matriculado>
    +getNota(): Double
    +getFrequencia(): Double
}

class Professor {
    - titulacao : String
    +registrarNota(matriculado: Matriculado, nota: Double): void
    +registrarFrequencia(matriculado: Matriculado, frequencia: Integer): void
    +listarTurmas(): List<Turma>
    +gerarRelatorioTurma(turma: Turma): String
    +getTitulacao(): String
}

class Admin {
    +gerenciarUsuarios(): void
    +gerarRelatorioGeral(): String
}

class Turma {
    - id : UUID
    - codigo : String
    - horario : String
    - localidade : String
    - dataIn : LocalDate
    - dataOut : LocalDate
    +adicionarAluno(aluno: Aluno): Matriculado
    +removerAluno(aluno: Aluno): void
    +isVagaDisponivel(): boolean
    +listarAlunos(): List<Aluno>
    +gerarRelatorio(): String
    +getVagasDisponiveis(): Integer
}

class Matriculado {
    - id : UUID
    - nota : Double
    - status : StatusMatricula
    - frequencia : Integer
    +calcularMedia(): Double
    +calcularSituacao(): String
    +adicionarAvaliacao(avaliacao: Avalia): void
    +isAprovado(): boolean
}

enum StatusMatricula {
    ATIVA
    TRANCADA
    CANCELADA
    APROVADO
    REPROVADO
}

class Avalia {
    - id : UUID
    - status : String
    - descricao : String
    - nota : Double
    - tipo : TipoAvaliacao
    - dataIn : LocalDate
    - dataOut : LocalDate
    +registrar(nota: Double, tipo: TipoAvaliacao): void
    +calcularPeso(): Double
    +getNota(): Double
}

enum TipoAvaliacao {
    PROVA
    TRABALHO
    SEMINARIO
    LISTA
    OUTRO
}

class Arquivo {
    - id : UUID
    - nome : String
    - caminho : String
}

class Disciplina {
    - id : Long
    - codigo : String
    - tipo : String
    - cargaHoraria : Integer
    - preRequisito : String
    +listarTurmas(): List<Turma>
    +ativar(): void
    +getCodigo(): String
    +getCargaHoraria(): Integer
}

class Curso {
    - id : Long
    - sigla : String
    - nome : String
    +listarDisciplinas(): List<Disciplina>
    +calcularCargaHorariaTotal(): Integer
    +getNome(): String
}

class CargaHoraria <<value object>> {
    - chObrigatoria : Integer
    - chOptativa : Integer
    - chNucleoLivre : Integer
    +calcularTotal(): Integer
}

class Departamento {
    - id : Long
    - sigla : String
    - nome : String
    +listarProfessores(): List<Professor>
    +listarCursos(): List<Curso>
    +getNome(): String
}

class Universidade {
    - id : Long
    - nome : String
    - sigla : String
    +listarDepartamentos(): List<Departamento>
    +getNome(): String
}

class Endereco <<value object>> {
    - numero : String
    - cep : String
    - obs : String
    +getEnderecoCompleto(): String
}

' Herança JOINED
Pessoa <|-- Aluno
Pessoa <|-- Professor
Pessoa <|-- Admin

' Value objects (@Embeddable)
Universidade "1" *-- "1" Endereco
Departamento "1" *-- "1" Endereco
Curso "1" *-- "1" CargaHoraria

' Estrutura institucional
Universidade "1" --> "1..*" Departamento : tem
Departamento "1" --> "1..*" Curso : possui
Departamento "1" --> "1..*" Disciplina : possui
Curso "1..*" --> "1..*" Disciplina : contém
Disciplina "1" --> "0..*" Turma : possui

Professor "1" --> "1" Departamento : pertence a
Professor "1" --> "0..*" Turma : ministra
Aluno "1..*" --> "1" Departamento : pertence a

' Associação N:M entre Aluno e Turma resolvida pela classe de associação Matriculado.
' Avalia pertence a uma matrícula (Matriculado), não diretamente a (Aluno, Turma).
Aluno "0..*" -- "0..*" Turma
(Aluno, Turma) .. Matriculado
Matriculado "1" *-- "0..*" Avalia : possui

' N:M Avalia x Arquivo (Modelo B — arquivo reutilizável)
Avalia "0..*" -- "0..*" Arquivo : anexa

@enduml
